--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" />
     </a>
     <div class="parent">Note: these examples mimic the ones for <code>dragula</code>, but using <code>vue-dragula</code>.</div>
-    <div id="app"></div>
+    <div id="app">
+      <h1>Hello app</h1>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
